change memory read

--- a/VMemModifierConsole/Properties/launchSettings.json
+++ b/VMemModifierConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "VMemReaderConsole": {
       "commandName": "Project",
-      "commandLineArgs": "read 13384 0x7d16fe4 4 -int"
+      "commandLineArgs": "search 20616 last -str -utf8"
     }
   }
 }
